--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p id="output" class="output"> Area? </p>
     <p id="output2" class="output2"> Circumference? </p>
     <script src="script.js"></script>
+    </input>
   </body>
 </html>
